[package]
name = "msp430fr2433"
version = "0.1.1"
authors = ["Jinwoo Park <pmnxis@gmail.com>"]
description = "Peripheral access crate for TI MSP430FR2433 microcontroller"
keywords = ["no-std", "msp430", "svd2rust", "embedded", "ti"]
repository = "https://github.com/pmnxis/msp430fr2433"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/msp430fr2433"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "1.0.0"
msp430 = "0.4.1"
vcell = "0.1.3" 
msp430-atomic = "0.1.4" # Only when using the --nightly flag

[dependencies.msp430-rt]
optional = true
version = "0.4.1"

[features]
rt = ["msp430-rt/device"]

[package.metadata.docs.rs]
features = ["device"]
targets = ["msp430-none-elf"]
cargo-args = ["-Z", "build-std=core"]
